--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
     </ul>
   </div>
   <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="components/Downloadify/js/downloadify.min.js"></script>
+  <script src="components/Downloadify/js/swfobject.js"></script>
   <script src="main.js"></script>
 </body>
 </html>
